internal/config/testdata/valid-config/configWithoutAlbumOption.hjson
{
  APIAppCredentials:
  {
    ClientID: client-id
    ClientSecret: client-secret
  }
  Account: youremail@domain.com
  SecretsBackendType: auto
  Jobs:
  [
    {
      SourceFolder: ./testdata
      DeleteAfterUpload: false
      IncludePatterns: []
      ExcludePatterns: []
    }
  ]
}
