internal/config/testdata/invalid-config/AlbumBadFormat.hjson
{
  APIAppCredentials:
  {
    ClientID: client-id
    ClientSecret: client-secret
  }
  Account: youremail@domain.com
  SecretsBackendType: auto
  Jobs:
  [
    {
      SourceFolder: ./testdata
      Album: invalid
      DeleteAfterUpload: false
      IncludePatterns: []
      ExcludePatterns: []
    }
  ]
}
